include_directories (../libpcp ../libpcp/src ../libpcp/src/net)
if (WIN32)
    include_directories (../libpcp/src/windows ../win_utils)
endif ()

add_executable (test_flow_notify test_flow_notify.c)
add_executable (test_event_handler test_event_handler.c)
add_executable (test_gateway test_gateway.c)
add_executable (test_lifetime_renewal test_lifetime_renewal.c)
add_executable (test_pcp_api test_pcp_api.c)
add_executable (test_pcp_client_db test_pcp_client_db.c)
add_executable (test_pcp_client_map_opcode test_pcp_client_map_opcode.c)
add_executable (test_pcp_client_peer_opcode test_pcp_client_peer_opcode.c)
add_executable (test_pcp_logger test_pcp_logger.c)
add_executable (test_pcp_msg test_pcp_msg.c)
add_executable (test_ping_gws test_server_discovery.c)
add_executable (test_server_reping test_server_reping.c)
add_executable (test_server_restart test_server_restart.c)
add_executable (test_sock_ntop test_sock_ntop.c)
add_executable (test_version_negotiation test_version_negotiation.c)

target_link_libraries (test_flow_notify pcpnatpmp)
target_link_libraries (test_event_handler pcpnatpmp)
target_link_libraries (test_gateway pcpnatpmp)
target_link_libraries (test_lifetime_renewal pcpnatpmp)
target_link_libraries (test_pcp_api pcpnatpmp)
target_link_libraries (test_pcp_client_db pcpnatpmp)
target_link_libraries (test_pcp_client_map_opcode pcpnatpmp)
target_link_libraries (test_pcp_client_peer_opcode pcpnatpmp)
target_link_libraries (test_pcp_logger pcpnatpmp)
target_link_libraries (test_pcp_msg pcpnatpmp)
target_link_libraries (test_ping_gws pcpnatpmp)
target_link_libraries (test_server_reping pcpnatpmp)
target_link_libraries (test_server_restart pcpnatpmp)
target_link_libraries (test_sock_ntop pcpnatpmp)
target_link_libraries (test_version_negotiation pcpnatpmp)
